# dphysics

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  README.md  common.h  debug.h  demo  main.cpp  math.h  matrix.cpp  matrix.h  plan.vym  ray  runtests  vec.h  vector.h
demos/: CMakeLists.txt  dashboard.cpp  dashboard.h
demos/Common/: App.h  Canvas.cpp  Canvas.h  CanvasObject.h  EntityWrapper.h  MatrixStack.cpp  MatrixStack.h  Plane.cpp  Plane.h  SceneObject.h  Shader.cpp  Shader.h  SimpleCanvas.cpp  SimpleCanvas.h  Sphere.cpp  Sphere.h  StaticObject.cpp  StaticObject.h  ViewCam.cpp  ViewCam.h  dashboard.cpp  glsetup.h  math_ext.h
demos/PlanetaryMotion/: CMakeLists.txt  PlanetaryMotionDemo.cpp  PlanetaryMotionDemo.h  planets.cpp
demos/RayTracing/: CMakeLists.txt  RayLightSource.h  RayObject.h  RayTracingDemo.cpp  RayTracingDemo.h  RayTracingDemo_parse.cpp  ray.cpp
demos/Shaders/: ShaderDetails.h  shader.frag  shader.vert
docs/html/: annotated.html  classes.html  common_8h_source.html  debug_8h_source.html  dir_030a0a7bad9ce33124748f0d211287a9.html  dir_d79e91794b459637e0b21a6f676ca5d9.html  dir_e66df14a2278836f86371481bcb8cc07.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  index.html  math_8h_source.html  matrix_8h_source.html  md_README.html  pages.html  structd_1_1mat4f-members.html  structd_1_1mat4f.html  structd_1_1vec-members.html  structd_1_1vec.html  structd_1_1vec4f-members.html  structd_1_1vec4f.html  vec_8h_source.html  vector_8h_source.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_9.js  pages_0.js  search.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js
include/: common.h  debug.h  matrix.h  vector.h
include/demo/: App.h  Canvas.h  DemoApp.h  FlyingCam.h  GfxObj.h  MatrixStack.h  MyProgram.h  PlainSphere.h  Program.h  Shader.h  SimpleCanvas.h  StaticGfx.h  ViewCam.h  glsetup.h  mat4.h
include/ray/: RayImage.h  RayLightSource.h  RayObject.h  RayScene.h  RayTracingDemo.h  parser.h
include/react/: Ent.h  RigidBody.h  Shape.h  Solid.h  Sphere.h  World.h  absbody.h  absshape.h  common.h  debug.h  entity.h  factory.h  math.h  mathutils.h  matrix.h  methods.h  reAABB.h  reBroadPhase.h  reDistortedShape.h  reEnt.h  reMatrix.h  reRigidBody.h  reShape.h  reSolid.h  reSphere.h  reTMatrix.h  reTriangle.h  reVector.h  reWorld.h  react.h  rigidbody.h  sphere.h  utils.h  vector.h  world.h
include/react/Collision/: Strategy.h  reAABB.h  reBSPTree.h  reBroadPhase.h  reCollisionGraph.h  reContactGraph.h  reSpatialQueries.h  reTreeBalanceStrategy.h
include/react/Dynamics/: ContactGraph.h  reContactGraph.h  reGravAction.h  reInteraction.h
include/react/Entities/: Entity.h  Rigid.h  Static.h  StaticBody.h  reEnt.h  reRigidBody.h  reSolid.h
include/react/Math/: Integrator.h  Transform.h  Transform_ops.h  mat3x3.h  mat3x3_ops.h  mat3x4_ops.h  mat4x4.h  mat4x4_ops.h  math_common.h  math_funcs.h  math_ops.h  quat.h  quat_ops.h  vec3.h  vec3_ops.h
include/react/Memory/: reAllocator.h  reBaseAllocator.h  reFreeListAllocator.h  reProxyAllocator.h
include/react/Utilities/: Builder.h  ContactFilter.h  math_funcs.h  math_ops.h  reBuilder.h  (+9 more)
src/: CMakeLists.txt  RigidBody.cpp  Sphere.cpp  World.cpp  factory.cpp  main.cpp  matrix.cpp  proxyallocator.cpp  reMatrix.cpp  reRigidBody.cpp  reWorld.cpp  rigidbody.cpp  sphere.cpp  world.cpp
src/Collision/: Strategy.cpp  reBSPTree.cpp  reTreeBalanceStrategy.cpp
src/Dynamics/: ContactGraph.cpp  reContactGraph.cpp
src/Entities/: Entity.cpp  reEnt.cpp
src/Math/: constants.cpp  mat4x4.cpp
src/Memory/: reProxyAllocator.cpp
src/Utilities/: Builder.cpp  reBuilder.cpp  reEntList.cpp  util_funcs.cpp
src/demo/: App.cpp  CMakeLists.txt  Canvas.cpp  MatrixStack.cpp  MyProgram.cpp  PlainSphere.cpp  Program.cpp  Shader.cpp  SimpleCanvas.cpp  StaticGfx.cpp  ViewCam.cpp  demo.cpp  mat4.cpp  shader.frag  shader.vert
src/memory/: FreeListAllocator.cpp  ProxyAllocator.cpp  freelistallocator.cpp  reFreeListAllocator.cpp  reProxyAllocator.cpp
src/ray/: CMakeLists.txt  RayImage.cpp  RayScene.cpp  RayTracingDemo.cpp  RayTracingDemo_parse.cpp  parser.cpp  ray.cpp
src/react/: CMakeLists.txt  common.cpp  reDistortedShape.cpp  reMatrix.cpp  reShape.cpp  reSphere.cpp  reTMatrix.cpp  reTriangle.cpp  reWorld.cpp
src/react/Collision/: reBSPTree.cpp  reContactGraph.cpp  reTreeBalanceStrategy.cpp
src/react/Collision/Shapes/: reDistortedShape.cpp  reProxyShape.cpp  reShape.cpp  reSphere.cpp  reTriangle.cpp
src/react/Dynamics/: reContactGraph.cpp
src/react/Entities/: reEnt.cpp  reRigidBody.cpp
src/react/Memory/: reFreeListAllocator.cpp  reProxyAllocator.cpp
src/react/Utilities/: reEntList.cpp  reMatrix.cpp  reQuaternion.cpp  reTMatrix.cpp
src/react/broadphase/: reKDTree.cpp
src/react/memory/: reFreeListAllocator.cpp  reProxyAllocator.cpp
tests/: CMakeLists.txt  TestFixtures.cpp  TestFixtures.h  defaultWorld.h  helpers.h  main.cpp  mat3x3.h  mat4x4.h  math_ops.h  quat.h  reBSPTree.h  reEntList.h  reIntegrator.h  reLinkedList.h  reMatrix.h  reProxyShape.h  reQuaternion.h  reRigidBody.h  reSolid.h  reSphere.h  reTransform.h  reVector.h  tests  tests.cpp  vec3.h
tests/Collision/: BSPTree.h  CMakeLists.txt  collision_tests  collision_tests.cpp
tests/Collision/Shapes/: CMakeLists.txt  IntersectionTests.h  Plane.h  PlaneShape.h  ProxyShape.h  Ray.h  ShapeProxy.h  Sphere.h  reProxyShape.h  reSphere.h  shapes_tests  shapes_tests.cpp
tests/Entities/: CMakeLists.txt  Rigid.h  Static.h  StaticBody.h  entities_tests  entities_tests.cpp  reRigidBody.h
tests/Integration/: CMakeLists.txt  integration_tests.cpp  test_case_1.h
tests/Math/: CMakeLists.txt  Integrator.h  mat3x3.h  mat4x4.h  math_tests  math_tests.cpp  quat.h  reIntegrator.h  reTransform.h
tests/Utilities/: CMakeLists.txt  ContactFilter.h  reLinkedList.h  utility_tests.cpp
(+39 files in other folders)
